fixed overflow on auth page

--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,32 @@
 .App {
 	text-align: center;
+	height: 100%;
 }
 
 .input-section {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	width: 100%;
 }
 
 .input-field {
 	display: flex;
-	flex: 1;
 	flex-direction: column;
 	align-items: flex-start;
 	padding: 10px;
 	font-size: 16px;
 	gap: 10px;
+	width: 100%;
+	max-width: 400px;
+	box-sizing: border-box;
 }
 
 .submit-section {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	width: 100%;
 }
 
 .submit-section button,
@@ -91,7 +96,6 @@
 	font-size: 14px;
 }
 
-/* Common Input and Select Styles */
 .custom-input,
 .custom-select {
 	width: 100%;
@@ -121,7 +125,6 @@
 
 .auth-header {
 	text-align: center;
-	margin-bottom: 20px;
 }
 
 .auth-header h1 {
@@ -134,8 +137,10 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 100vh;
-	padding: 20px;
+	min-height: 90vh;
+	gap: 20px;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
 .auth-form {
@@ -149,7 +154,7 @@
 }
 
 .submit-button {
-	width: 20%;
+	width: 30%;
 	padding: 12px;
 	font-size: 16px;
 	background-color: #4caf50;
